@@ -1,5 +1,6 @@
 DIST aufs-sources-3.10_p20130708.tar.xz 146104 SHA256 57bf9d28d15e4243525bea3b44c138bb88eff37c673cf6423e4eafae06fe885a SHA512 1dbfc5a3394b6885ae64853c6ab94222d11bbac2f2cc8c829348a0728b3f36a4435d96e33e2c40a549e13753571a007890c3eda69af100a51bdf6bdc1644e2bd WHIRLPOOL d1903438f59ab524ebbfabb56a8b310cd245d3177bfcb50f729f6194322cfec3ea859b16c3c1145a89a9101e20fe3a99731f852bdb7c59ff8356c579238a2563
 DIST aufs-sources-3.9_p20130520.tar.xz 145724 SHA256 04796f643635c5eb021d0193fa4b4ba624c88946962cf9977b5d7725d2063a41 SHA512 615852a86be94650d6ce70a0e390ce468748c469691d280fa257f51e94ae64d523bd0e5fa47570fc0fe460324ef7141fc0e7aac49d1b034618cc8e45a28b87b6 WHIRLPOOL e2c1c08deaf21930d3b710ce70f724e140596595547391bdefe3d30ef1f79d7dd2d7a32970c83bbc471370cf7a3f8c1650e70bf7153b857ac0c7cf6ead712635
+DIST aufs-sources-3.9_p20130722.tar.xz 145836 SHA256 98b815cc3a78f2e9bd9c4cf7a5bd483cea5fb3e7a567001c78108a6e238bee21 SHA512 e62c195bdad9c35d4f07369052393b23290ca5ec276ea149c5ec462b515832939135da07c53f43178eae1ee8a8088f4c82658d5bda9d7f4f4bb8f0293036a72d WHIRLPOOL 58adf68bcdcafa12b5b3e2e6d3b0ce38669dd48c88e3684a2b9661a1b25b9cace6eacd17be6bbb52269ddda00276a379927a4ad515029d1ed985cf0f067d2dbe
 DIST deblob-3.10 117299 SHA256 d48cad04fab6a802b3a3e34955c8e35b539c2441f9a62522ec5a132c3a5ae684 SHA512 7b30f0f97ed97bf6b096d4a321b4b1e62f4b48f07972f2511870c3eaaf4f3877b0c6af2f30f6b985edf9c9c79267d40448b504c59016acfe06374630d1fdcba9 WHIRLPOOL 03a5963367cc6cb4f87e3d315ab61a8b3cb1fe577b20d7e2fb6ad83464075b3ed8176f543bb4c3b4e607d78cd55ef940f446bb75be09eb7496321930413ce2b9
 DIST deblob-3.9 116031 SHA256 0fb17070d5aaf226fca39f70df68b7d482e4f803e0ef974626440a28c26b5dc3 SHA512 e014add3728dc3fa0b938f3849ccba60e82354a811eefe6761036aa5e5b7bda39960758bb918506ed3cd0758360729144304227ab2cc3f5489813204f0053d3d WHIRLPOOL 4e65c3a6ba5dd5d850567fcd347167245b527b098ffa390bf0e9fb9778ddb06cd48553f697e2fe7cb793714b520dbb5b90b9948a339663a315e299272aca09ef
 DIST deblob-check-3.10 565672 SHA256 748df2cf5c1f012f9942948827e57b12bb05c569cae220416b3c0339520d9855 SHA512 341ea8a755c4f1f42ddbc4e7dfe8d786e8b29f497bee3fd72154c8c1c0bcadcb9efff04f2663090bd8741e5b5baafed26a62b9d16c31f3b31665cd3cd3e779d5 WHIRLPOOL 7e6c8eefa9b44e7d50011a9390baf7999533b4016122992c0ac0722cce05dbb8e4b7e96f1f05e9bfdd2ce3e4c08f0e06c8955b68ed8c044ff75f3a314a405824
@@ -8,6 +9,8 @@ DIST genpatches-3.10-4.base.tar.xz 56684 SHA256 e6e8ea81bd3a1687203a1d7bd103d01f
 DIST genpatches-3.10-4.extras.tar.xz 16564 SHA256 2b6f06a71c89c5866615b1a32324f48e26f7e89b2e7473342a1f3451f1e39500 SHA512 1ef0aad40335438cc10163ffd2e7b7730274fff9bc9ce265be6e194fddf8edf7f527d1cbe3c411d6ba79f4fb63f2ee8d54af37fcdf9eb19f5717b6d54ecfce16 WHIRLPOOL 3bb7054fdfcc887fd306a60deda667acdba0b64e0b5c719f807b50b05c67451fae20e6e22fbde59fbd2fff2ab32b21cb91fa58ae05b7a37e9c8b23c28d5cc66a
 DIST genpatches-3.9-15.base.tar.xz 281668 SHA256 2e23fbf12a5436440bf4d292747e91917f5d4306fd76d207d819478970810d37 SHA512 df6efd8da0a3d3c7f0f4be1fe9ec88db2893ab9cfd4e2504beabac57f8b68bcf7b3de6d2b63210edd1e2fdb4f93fc8d8ced300de2fa21ff44b69aae492de7d11 WHIRLPOOL 1c60bbdb453f8ab52528c502c2dc32f0440538a491e003062e6cdaaa09fd6ec0dd5f8b83181f4eb5e2c793f00dd4a0272476e7e3813b6a29ee6224f5452f06f1
 DIST genpatches-3.9-15.extras.tar.xz 16572 SHA256 6a93041aba5cfa6a45a348b654e129b4ba3659c87437217bbd65eb7a0a841827 SHA512 53c94f50f63d866a66869cfa0b2692c8b71ceb17a703424948d5a92c5390942667651e30fb4a662ba02147b70849cd7fb6bf71f0a4940f19ee1b392e684eb7a4 WHIRLPOOL cc2b332caffd5411c55ed9f7ddcde4c3275e6a68ec765f579e682e1e957b48a1c8601f9d607b4b4b3137af40ae0bcc091390ce733b2fdfaf95db00d77ce57370
+DIST genpatches-3.9-16.base.tar.xz 291716 SHA256 84bf5d7a91a4b4b58ddef2be167d00653a0cde07968cc7920702318327743334 SHA512 4cbc23b9245f4fd61adbf10c9883aac91a5747f8be25820b233c0e06004b4d26b2ce5883660e1f97c00d32a7781315672746718ee6bbe8d0413fa19be0ab8493 WHIRLPOOL a33f860f2eaa1ddd11534f7188507eb633c1ab9f619b70aca175320778d056bbf661ee0849724b7a1eaa2a333d60d33760617886204bc91f3c83501afab3a7f2
+DIST genpatches-3.9-16.extras.tar.xz 16572 SHA256 6a93041aba5cfa6a45a348b654e129b4ba3659c87437217bbd65eb7a0a841827 SHA512 53c94f50f63d866a66869cfa0b2692c8b71ceb17a703424948d5a92c5390942667651e30fb4a662ba02147b70849cd7fb6bf71f0a4940f19ee1b392e684eb7a4 WHIRLPOOL cc2b332caffd5411c55ed9f7ddcde4c3275e6a68ec765f579e682e1e957b48a1c8601f9d607b4b4b3137af40ae0bcc091390ce733b2fdfaf95db00d77ce57370
 DIST lh-logo_linux_clut224.ppm 213668 SHA256 cf2ffc266799f3948131c30fe72870ff03afe9010643cc5a1c7b36cd1fe80562 SHA512 95b2a9b21f9125e178e32447f2310983427b37ffd4a861ce145d57e7daa828a38e51641069cdd191f4f2b303a887ae5b93ab0a40290a7976302683d633cdb315 WHIRLPOOL d0e693f86e964661090774350bdc4621f184bce20c7ad1e2fa62a941894feca5b709029a8f1ae398ca3f190f1eacd8c0e072f82e589cbae3dc2da565acca2297
 DIST linux-3.10.tar.xz 73175088 SHA256 df27fa92d27a9c410bfe6c4a89f141638500d7eadcca5cce578954efc2ad3544 SHA512 5fb109fcbd59bf3dffc911b853894f0a84afa75151368f783a1252c5ff60c7a1504de216c0012be446df983e2dea400ad8eeed3ce04f24dc61d0ef76c174dc35 WHIRLPOOL e7c0ccc2231e430b831218fc66f1940d095d2d5447d391329c6a7373d4a1d16708f64778b32e4847802ee2dae4fcf7cb67a1238fd4eb204fd0c4bce2d8134053
 DIST linux-3.9.tar.xz 72104164 SHA256 60bc3e64ee5dc778de2cd7cd7640abf518a4c9d4f31b8ed624e16fad53f54541 SHA512 77fa521f42380409f8ab400c26f7b00e225cb075ef40834bb263325cfdcc3e65aef8511ec2fc2b50bbf4f50e226fb5ab07d7a479aaf09162adbbf318325d0790 WHIRLPOOL 668a8de30c7c3ccf6558cf0f29570f15e37ca7d599d1453afc3cab113d1b05fbd5b32646dd9ed798ceb61405a8754345da0740a53f467b825445028cda4bc698
