@@ -1,5 +1,10 @@
 
 
+*lh-sources-3.9.11 (22 Jul 2013)
+
+  22 Jul 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.9.11.ebuild:
+  Bump to aufs release and genpatches
+
   14 Jul 2013; Justin Lecher <jlec@gentoo.org> -lh-sources-3.9.5.ebuild,
   -lh-sources-3.9.6.ebuild, -lh-sources-3.9.6-r1.ebuild,
   -lh-sources-3.9.7.ebuild, -lh-sources-3.9.8.ebuild, -lh-sources-3.9.9.ebuild,
